--- a/design/desenhandoico.html
+++ b/design/desenhandoico.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,73 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./glifo.html" class="js-button">Anterior</a>
+        <a href="./desenhandologo.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Desenhando um ícone
         </h1>
-
         <p>
+            Observe o desenho abaixo:
         </p>
-
+        <img src="./desenhandoico.png" alt="">
+        <p>
+            O que temos na figura é um ícone que pode ser utilizado como um botão de página inicial ou até mesmo compor
+            a logomarca de uma construtora. Para fazer esse desenho siga o tutorial abaixo:
+        </p>
+        <p>
+            1. Abra o Inkscape e salve o documento em sua pasta com o nome Ícone.svg.
+        </p>
+        <p>
+            2. Desenhe uma elipse de 120mm por 120mm.
+        </p>
+        <p>
+            3. Aplique uma cor de contorno e retire o preenchimento.
+        </p>
+        <p>
+            4. Aplique uma espessura de contorno de 6mm.
+        </p>
+        <p>
+            5. Clique no menu Caminho &rightarrow; Converter em Caminho.
+        </p>
+        <p>
+            6. Clique no menu Caminho &rightarrow; Converter Contorno em Caminhos.
+        </p>
+        <p>
+            7. Ou utilize os atalhos <span class="codigo">Ctrl+Shift+C</span> e <span class="codigo">Ctrl+Alt+C</span>.
+        </p>
+        <p>
+            8. Desenhe um retângulo com 40 de largura por 60 de altura.
+        </p>
+        <p>
+            9. Defina uma cor de preenchimento e retire o contorno.
+        </p>
+        <p>
+            10. Converte esse retângulo em caminho (<span class="codigo">Ctrl+Shift+C</span>).
+        </p>
+        <p>
+            11. Com a ferramenta Editor de Nós, desça um dos nós superiores até o meio do retângulo.
+        </p>
+        <p>
+            Se tiver dificuldade, veja abaixo o passo a passo:
+        </p>
+        <img src="./desenhandoico2.png" alt="">
+        <p>
+            12. Utilize um segundo retângulo com os cantos arredondados para aparar (subtrair) o retângulo.
+        </p>
+        <p>
+            13. Duplique e espelhe, em seguida usando os snaps encaixe um no outro.
+        </p>
+        <p>
+            14. Una os dois objetos (<span class="codigo">Ctrl+</span>).
+        </p>
+        <p>
+            15. Centralize dentro do círculo, se necessário alinhe.
+        </p>
+        <p class="notas">
+            Lembrando: o comando para duplicar é <span class="codigo">Ctrl+D</span>, o comando para espelhar horizontalmente é H e as opções de alinhamento encontram-se na janela de encaixe Alinhar e Distribuir.
+        </p>
     </div>
 </div>
 
