--- a/design/desenhandologo.html
+++ b/design/desenhandologo.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,82 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./desenhandoico.html" class="js-button">Anterior</a>
+        <a href="./redesenho.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Desenhando uma logomarca
         </h1>
 
         <p>
+            Agora desenharemos uma logomarca, lembrando que se fôssemos iniciar do zero, todas as etapas citadas no
+            início do capítulo deveriam ser levadas em consideração como buscar referências, testar variações etc.
+        </p>
+        <p>
+            Neste trabalho faremos algo ainda mais simples. Observe a imagem abaixo e tente seguir o passo-a-passo.
+        </p>
+        <img src="./desenhandologo.png" alt="">
+        <p>
+            1. Desenhe um retângulo de 80x80.
+        </p>
+        <p>
+            2. Escolha uma cor de preenchimento e retire o contorno.
+        </p>
+        <p>
+            3. Desenhe um retângulo de 100x100.
+        </p>
+        <p>
+            4. Escolha uma cor de preenchimento e retire o contorno.
+        </p>
+        <p>
+            5. Utilizando a tecla control, rotacione ambos os retângulos 45°.
+        </p>
+        <p>
+            6. Crie uma cópia do retângulo menor.
+        </p>
+        <p>
+            7. Posicione a cópia sobre o retângulo maior encaixando-a no topo usando os snaps, e apare (subtraia).
+        </p>
+        <p class="notas">
+            O objeto a ser aparado deve sempre estar por baixo, para controlar a ordem de posição use as teclas Home,
+            End, PageUp e PageDown.
+        </p>
+        <p>
+            8. Agora encaixe o retângulo menor no maior e mova um pouco para cima utilizando a tecla control.
+        </p>
+        <p>
+            9. Pegue a ferramenta texto.
+        </p>
+        <p>
+            10. Na barra de propriedade configure como Futura MD BT estilo Bold, tamanho 40, alinhamento centralizado.
+        </p>
+        <p>
+            11. Digite Universidade JorgeCAD.
+        </p>
+        <p>
+            12. Pegue a ferramenta seleção e posicione o texto abaixo do logo.
+        </p>
+        <p class="notas">
+            Não se preocupe se se atrapalhar um pouco com textos, ainda teremos um capítulo especialmente para trabalhar
+            com tipografia neste curso.
         </p>
 
+        <img src="./exercicio.png" alt="">
+        <p>
+            Neste desafio você terá de criar dois ícones e um logo. Colocará em prática o que já aprendeu sobre
+            operações booleanas, gradientes e estilos de preenchimento e contorno. Observe os desenhos abaixo e tente
+            reproduzi-los no Inkscape.
+        </p>
+        <p>
+            Salve o arquivo como Glifos.svg.
+        </p>
+        <img src="./desenhandologo2.png" alt="">
+        <p class="notas">
+            Em alguns casos você terá de usar intersecção, o que já vimos anteriormente, o atalho para intersecção é
+            <span class="codigo">Ctrl+*</span>. <br>
+            Se tiver dificuldades com este exercício, solicite o auxílio de seu instrutor.
+        </p>
     </div>
 </div>
 
