--- a/design/0.html
+++ b/design/0.html
@@ -175,4 +175,7 @@
 
     <p>O Autor</p>
     <a href="./oautor.html">O Autor</a>
+
+    <p>Sessão de Downloads</p>
+    <a href="./downloads.html">Downloads</a>
 </div>
