--- a/design/downloads.html
+++ b/design/downloads.html
@@ -27,8 +27,21 @@
         </h1>
 
         <p>
-            Esta é a sessão de downloads do Curso Completo de Design Gráfico
+            Esta é a sessão de downloads do Curso Completo de Design Gráfico.
         </p>
+        <p>
+            Todos os arquivos necessários ao curso estão contidos num único arquivo zip com duas pastas:
+        </p>
+        <p>
+            Imagens: Todas as imagens solicitadas ao longo do curso.
+        </p>
+        <p>
+            Desafios: Arquivos com os desafios do Inkscape, GIMP e Publisher, e arquivo da fonte Kill the Noise.
+        </p>
+        <p>
+            Baixa o arquivo compactado neste link:
+        </p>
+        <a class="js-button" href="https://drive.google.com/uc?id=1o5lVwdd3_Hk71KPTGOrcBO_OZRD7A_p6&export=download" target="_blank">Baixar</a>
     </div>
 </div>
 
