--- a/design/camadas.html
+++ b/design/camadas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,85 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
+        <a href="./raster.html" class="js-button">Anterior</a>
+        <a href="./baldecon.html" class="js-button" style="float: right;">Próximo</a>
 
         <h1>
+            Recursos de Desenho
         </h1>
-
         <p>
+            Agora que conhecemos os recursos básicos para desenho vetorial começaremos a utilizar ferramentas avançadas
+            para facilitar o trabalho e a organização do nosso arquivo, como gerenciamento de camadas, grupos, clips
+            entre outros, além de alguns efeitos avançados.
+        </p>
+
+        <h1>
+            Camadas
+        </h1>
+        <p>
+            Camadas, ou Layers em inglês, são agrupamentos semânticos de objetos que podem ser ordenados de forma que os
+            objetos numa camada superior sejam exibidos acima dos objetos numa camada inferior e vice-versa, assim como
+            acontece quando ordenamos os objetos com PageUp e PageDown no Inkscape, uma camada oferece ainda alguns
+            recursos como bloquear e ocultar que afetam de maneira uniforme todos os objetos assinalados a ela. Objetos
+            numa camada oculta não são exibidos na tela o que ajuda a manter o foco em certa parte do desenho e objetos
+            numa camada bloqueada não podem ser selecionados ou editados o que facilita o trabalho em determinada
+            camada. A maioria dos softwares de design gráfico, seja vetorial ou bitmap dá suporte a camadas, no caso do
+            CorelDraw o gerenciador de camadas é chamado de Gerenciador de Objetos e funciona semelhante ao gerenciador
+            de camadas do Illustrator.
+        </p>
+        <p>
+            Experimente como funciona este recurso no Inkscape:
+        </p>
+        <p>
+            1. Abra o Inkscape.
+        </p>
+        <p>
+            2. Clique no menu Camada &rightarrow; Gerenciador de camadas.
+        </p>
+        <p>
+            3. Clique com o botão direito sobre a Camada 1 e selecione Renomear Camada.
+        </p>
+        <p>
+            4. Digite “Plano de Fundo” e pressione Enter.
+        </p>
+        <p>
+            5. Pegue a ferramenta retângulo.
+        </p>
+        <p>
+            6. Desenhe um retângulo numa área vazia da tela. Escolha uma cor na paleta de cores.
+        </p>
+        <p>
+            7. Agora clique no cadeado da camada no Gerenciador de camadas.
+        </p>
+        <p>
+            8. Pegue a ferramenta seleção e agora note que você não consegue selecionar ou arrastar o retângulo.
+        </p>
+        <p>
+            9. Clique com o botão direito sobre a camada no Gerenciador de camadas. Selecione Adicionar nova camada.
+        </p>
+        <p>
+            10. Clique na camada que criou para selecioná-la.
+        </p>
+        <p>
+            11. Digite “Objetos”, selecione Acima da camada atual e clique em Adicionar.
+        </p>
+        <p>
+            12. Clique na ferramenta Elipse.
+        </p>
+        <p>
+            13. Escolha uma cor diferente na paleta e desenhe a elipse sobre o retângulo.
+        </p>
+        <p>
+            14. Clicando no ícone de olho no Gerenciador de camadas, você pode ocultar os objetos na nova camada.
+        </p>
+        <p>
+            15. Arraste a camada Objetos para baixo da camada Plano de fundo e note que agora a elipse está embaixo do
+            retângulo. Agora arraste a camada Plano de fundo para baixo.
+        </p>
+        <p class="notas">
+            Você pode criar quantas camadas quiser para organizar melhor seus desenhos, e adicionar quantos objetos
+            quiser a uma camada. Nota: Sempre estamos desenhando em uma camada! Alterando a camada ativa, todos os
+            desenhos serão adicionados a ela.
         </p>
 
     </div>
