--- a/design/0.html
+++ b/design/0.html
@@ -121,6 +121,7 @@
     <a href="./estilospar.html">Estilos de Parágrafo</a>
 
     <p>Microsoft Publisher</p>
+    <a href="./publisher.html">MS Publisher</a>
     <a href="./caixastex.html">Caixas de Texto</a>
     <a href="./formas.html">Formas</a>
     <a href="./guias.html">Guias</a>
