--- a/design/arranjandoobj.html
+++ b/design/arranjandoobj.html
@@ -172,6 +172,9 @@
             formato
             .png, navegue até sua pasta e clique em Exportar.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
         <img src="./exercicio.png" alt="">
         <p>
             Neste exercício treinaremos um pouco do que já aprendemos. Abra um novo arquivo e salve com o nome Exercício
