--- a/design/desenhandologo.html
+++ b/design/desenhandologo.html
@@ -82,6 +82,9 @@
             Não se preocupe se se atrapalhar um pouco com textos, ainda teremos um capítulo especialmente para trabalhar
             com tipografia neste curso.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
 
         <img src="./exercicio.png" alt="">
         <p>
