--- a/design/edicaodever.html
+++ b/design/edicaodever.html
@@ -107,6 +107,9 @@
             Para adicionar um nó em uma curva basta dar um duplo clique com a ferramenta editor de nós. Para excluir um
             nó basta selecioná-lo e apertar delete.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
 
         <img src="./exercicio.png" alt="">
         <p>
