--- a/design/midiaimp.html
+++ b/design/midiaimp.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,33 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./harmoniacor.html" class="js-button">Anterior</a>
+        <a href="./tipografia.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Mídia impressa
         </h1>
 
         <p>
+            Apesar das tintas das impressoras utilizarem um padrão CMYK para imprimir, já que a tinta é um produto
+            físico e a cor será gerada pela incidência da luz externa, isso não significa que a cor selecionada no
+            software para imprimir deve sempre estar em modo CMYK, inclusive há uma falta de entendimento desse assunto
+            que faz com que gráficas menores imprimam neste modo de cor, fazendo com que arte-finalistas tenham que
+            converter o trabalho antes de enviar para a impressora. Acontece que o modo CMYK dentro de um software
+            produz cores menos vívidas que a que as impressoras são capazes de imprimir, tanto é verdade que grandes
+            gráficas não aceitam artes que não estejam em RGB. Toda impressora possui um modo de impressão RGB e algumas
+            já o possuem pré-configurado, mesmo plotters de impressão em grande escala e impressoras rotativas
+            industriais possuem esse modo de impressão.
+        </p>
+        <p>
+            Tanto o modo de impressão RGB quanto o modo CMYK podem causar variação da cor que aparece na tela para a que
+            sai na mídia impressa, e vários fatores causarão isso, como o tipo de mídia por exemplo, uma impressão em
+            papel fotográfico não terá a mesma cor que a de papel offset ou de adesivo plástico, o tipo, a marca e a
+            qualidade da tinta também interferirão no resultado final bem como o tipo e a configuração da impressora
+            etc. Até mesmo a configuração do monitor utilizado para visualizar a arte na tela pode fazer com que o que
+            se veja seja diferente do resultado impresso. Um bom domínio de todos os componentes envolvidos no processo
+            de criação/finalização/impressão é o que vai garantir ter como resultado o que se planejou.
         </p>
 
     </div>
