--- a/design/opacidade.html
+++ b/design/opacidade.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,52 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./clipagem.html" class="js-button">Anterior</a>
+        <a href="./mesclagem.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Opacidade
         </h1>
 
         <p>
+            Opacidade é o oposto da transparência e consiste em diminuir o valor do canal Alfa de um objeto, veremos
+            mais sobre isto no capítulo sobre Teoria das Cores. Um objeto que tenha 50% de opacidade transmitirá
+            50% de sua própria luz e 50% da luz de tudo o que estiver abaixo dele, um objeto com 0% de opacidade será
+            invisível, e 100% de opacidade o tornará totalmente visível. Mesmo que os dois conceitos, opacidade e
+            transparência sejam utilizados para o mesmo fim, há uma grande diferença entre os dois, enquanto 0% de
+            opacidade deixa um objeto invisível, o mesmo só ocorre com 100% de transparência, e o inverso também, um
+            objeto só é totalmente visível com 0% de transparência, ou seja, 100% de opacidade, isso porque a
+            transparência se refere a quanto um objeto é transparente, enquanto a opacidade se refere a quanto um objeto
+            emite de luz, portanto o objeto 100% opaco não tem transparência e um objeto 100% transparente não tem
+            opacidade. Os softwares podem utilizar um modelo ou outro de medição de transparência dos objetos, o que não
+            interfere na forma de trabalho senão na maneira como os valores serão calculados.
+        </p>
+        <p>
+            Para compreender melhor, vamos alterar a opacidade de um objeto no Inkscape:
+        </p>
+        <p>
+            1. Abra o Inkscape.
+        </p>
+        <p>
+            2. Desenhe um retângulo e aplique um preenchimento gradiente com duas cores.
+        </p>
+        <p>
+            3. Agora desenhe uma estrela ou um círculo sobre ele e aplique uma cor sólida diferente.
+        </p>
+        <p>
+            4. Com o último objeto selecionado, clique com o botão direito e selecione Preenchimento e Contorno.
+        </p>
+        <p>
+            5. Na janela de encaixe que se abriu, selecione a aba Preenchimento.
+        </p>
+        <p>
+            6. Deslize sobre o controle Opacidade ao final da janela e note como o objeto fica mais ou menos
+            transparente.
+        </p>
+        <p class="notas">
+            Para entender como funciona os diferentes modos de cor que aparecem nessa janela aguarde o estudo sobre
+            teoria das cores que veremos logo à frente neste curso.
         </p>
 
     </div>
