--- a/design/operacoesbool.html
+++ b/design/operacoesbool.html
@@ -180,6 +180,9 @@
             Está finalizado nosso tutorial, selecione e exporte o desenho para sua pasta com o nome Céu Estrelado.png.
             Se tiver dificuldades com esse tutorial solicite o auxílio de seu instrutor.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
         <img src="./exercicio.png" alt="">
         <p>
             Neste exercício temos dois desenhos bem simples para você praticar mais subtração e intersecção de objetos.
