--- a/design/paletacor.html
+++ b/design/paletacor.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,28 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./coresque.html" class="js-button">Anterior</a>
+        <a href="./harmoniacor.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Paleta de Cores
         </h1>
 
         <p>
+            Um conjunto predefinido de cores é comumente chamado de paleta de cores ou leque de cores, assim temos
+            paletas RGB, paletas CMYK e outros tipos de paletas como Pantone.
         </p>
-
+        <p>
+            No design gráfico é habitual definir paletas personalizadas para cada trabalho, como, por exemplo, quando se está
+            desenvolvendo a identidade de uma marca essa marca terá sua própria paleta que deve se adequar ao objetivo
+            da marca, além do design gráfico, outras áreas trabalham paleta de cores como design de interiores,
+            arquitetura, ilustração, animação etc.
+        </p>
+        <p>
+            Você pode desbravar o mundo das cores, definir paletas personalizadas e muito mais neste site:
+        </p>
+        <a href="https://color.adobe.com/" class="js-button" target="_blank">color.adobe.com</a>
     </div>
 </div>
 
