--- a/design/raster.html
+++ b/design/raster.html
@@ -147,6 +147,9 @@
             utilizá-los e dê preferência. Os formatos .webp e .webm tornam os arquivos ao mesmo tempo mais leves e com
             maior resolução por serem otimizados.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
 
         <img src="./exercicio.png" alt="">
         <p>
@@ -161,6 +164,7 @@
         <p>
             Salve seu arquivo .svg e exporte a imagem em formato .png.
         </p>
+        
         <img src="./raster.png" alt="">
         <p class="notas">
             Não vale rastrear a imagem! É preciso redesenhar sobre ela.
