--- a/design/usandoguias.html
+++ b/design/usandoguias.html
@@ -113,6 +113,9 @@
         <p>
             11. Selecione as duas e pressione <span class="codigo">Ctrl+</span> para uni-las.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
 
         <img src="./exercicio.png" alt="">
 
