--- a/design/verticebor.html
+++ b/design/verticebor.html
@@ -232,6 +232,9 @@
         <p>
             5. Clique nos nós e altere a cor como achar melhor.
         </p>
+    </div>
+    <br>
+    <div class="js-post">
 
         <img src="./exercicio.png" alt="">
         <p>
