--- a/design/baldecon.html
+++ b/design/baldecon.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,31 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./camadas.html" class="js-button">Anterior</a>
+        <a href="./grupos.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Balde e Conta-Gotas
         </h1>
 
         <p>
+            O Balde e o Conta-Gotas, são recursos utilizados para alterar cores de preenchimento e de contorno dos
+            objetos. O Conta-Gotas, chamado ainda de RGB Picker serve para recuperar a cor de um determinado objeto ou
+            de
+            um pixel numa imagem, o conta-gotas selecionará a cor de qualquer área num objeto sobre o qual clicarmos. Se
+            um objeto estiver selecionado ele será preenchido com a cor recuperada, se nenhum objeto estiver
+            selecionado, a cor será utilizada ao desenhar o próximo objeto.
         </p>
-
+        <p>
+            Já o Balde de Tinta serve para preencher objetos com determinada cor. A cor utilizada para preencher um
+            objeto será a última cor utilizada. Alguns softwares como o CorelDraw e o Inkscape permitem criar vetores
+            diretamente no preenchimento de uma área com a ferramenta balde de tinta.
+        </p>
+        <p>
+            No Inkscape, para utilizar o balde de tinta pressione a letra U, ou clique na ferramenta na Barra de
+            Ferramentas, e para utilizar o conta-gotas, clique na ferramenta ou pressione a letra D.
+        </p>
     </div>
 </div>
 
