--- a/design/clipagem.html
+++ b/design/clipagem.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,45 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./grupos.html" class="js-button">Anterior</a>
+        <a href="./opacidade.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Clipagem
         </h1>
 
         <p>
+            Este é um recurso também muito útil e consiste em colocar um objeto dentro do outro, pode ter nomes
+            diferentes em diversos softwares, por exemplo, nos aplicativos da Adobe como o Illustrator e o Photoshop, a
+            clipagem se chama máscara de clipagem, e no CorelDraw se chama Power-Clip. O comportamento da clipagem varia
+            de um software para o outro, alguns podem não suportar a clipagem de bitmaps, ou não suportar a edição da
+            clipagem sem que o conteúdo seja retirado do clip.
+        </p>
+        <p>
+            Para que você compreenda melhor o funcionamento da clipagem, abra o Inkscape e siga o tutorial abaixo:
+        </p>
+        <p>
+            1. Crie um retângulo e aplique o um preenchimento gradiente.
+        </p>
+        <p>
+            2. Desenhe uma estrela sobre o retângulo e aplique uma cor diferente nela.
+        </p>
+        <p>
+            3. Selecione os dois objetos, clique com o botão direito do mouse e selecione Inserir no clip.
+        </p>
+        <p>
+            4. Note que a estrela ficou com o preenchimento gradiente, isso porque o que você está vendo é o retângulo
+            que agora está dentro dela.
+        </p>
+        <p>
+            5. Agora selecione a estrela, clique com o botão direito do mouse e selecione Retirar do clip. Pronto, você
+            retirou o retângulo de dentro da estrela. Você pode clipar ainda bitmaps e grupos. Cada software terá uma
+            forma diferente de trabalhar com clipes.
+        </p>
+        <p class="notas">
+            O Inkscape não permite entrar no clipe, mas diversos softwares o permitem, no CorelDraw e no Illustrator
+            basta dar um duplo clique sobre o grupo.
         </p>
 
     </div>
