--- a/design/coresque.html
+++ b/design/coresque.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,23 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./escalahex.html" class="js-button">Anterior</a>
+        <a href="./paletacor.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Cores quentes e frias
         </h1>
 
         <p>
+            As cores podem ser divididas em dois grandes grupos psicológicos, cores quentes, que possuem gradações de
+            vermelho, amarelo e laranja, e cores frias que possuem gradações de magenta azul e verde. As cores quentes
+            possuem mais intensidade e têm efeito estimulante, enquanto as cores frias possuem menos intensidade e têm
+            efeito calmante. No Design de Interiores por exemplo, o designer pode ambientar uma sala de estar com cores
+            frias quando o cliente vive num local muito quente. Cores quentes e frias podem ainda remeter ao tema geral
+            de uma propaganda, por exemplo em propagandas de bebidas que são servidas geladas é comum vermos a
+            predominância de cores quentes.
         </p>
-
     </div>
 </div>
 
