--- a/design/desfoque.html
+++ b/design/desfoque.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,35 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./mesclagem.html" class="js-button">Anterior</a>
+        <a href="./sombrasbri.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Desfoque
         </h1>
 
         <p>
+            O desfoque também é muito utilizado em Design Gráfico e pode servir para criar efeitos de neon, efeitos de
+            sombra, de brilho, de vidro embaçado, de foco de lente entre outros, assim como a opacidade e a mesclagem, o
+            desfoque é usado tanto no desenho vetorial quanto em bitmaps. Desfoque consistem em “esfumaçar” as bordas de
+            um objeto. Para compreender melhor, faça o seguinte:
+        </p>
+        <p>
+            1. Com o Inkscape aberto, desenhe um retângulo e aplique a ele um preenchimento gradiente com duas cores
+            diferentes, não use transparência.
+        </p>
+        <p>
+            2. Desenhe um segundo objeto sobre o retângulo e aplique um contorno e retire o preenchimento.
+        </p>
+        <p>
+            3. Agora desenhe um terceiro e aplique uma cor de preenchimento e retire o contorno.
+        </p>
+        <p>
+            4. Com os dois últimos objetos selecionados, abra a janela de encaixa Contorno e preenchimento.
+        </p>
+        <p>
+            5. Deslize o controle Desfoque e veja o que acontece com o desenho.
         </p>
 
     </div>
