--- a/design/formas.html
+++ b/design/formas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,22 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./caixastex.html" class="js-button">Anterior</a>
+        <a href="./guias.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Formas
         </h1>
 
         <p>
+            Na maioria dos casos, ao trabalhar na editoração de um flyer, um folder, uma revista ou qualquer outro
+            elemento de papelaria, será necessário inserir elementos gráficos como ilustrações, formas vetoriais entre
+            outros. O mais indicado nesse caso é utilizar um software de design gráfico para criar a arte, e
+            posteriormente inseri-la vinculada no arquivo, mesmo assim, praticamente todos os softwares de editoração
+            gráfica possuem ferramentas básicas para criar elementos gráficos, desde formas básicas como retângulo,
+            elipse e polígono até canetas bézier, em nosso próximo exercício veremos um pouco dessas ferramentas.
         </p>
-
     </div>
 </div>
 
