--- a/design/fundamentoscor.html
+++ b/design/fundamentoscor.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,51 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./espacovazneg.html" class="js-button">Anterior</a>
+        <a href="./sistemacor.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Teoria das cores
         </h1>
 
         <p>
+            A Teoria das Cores é uma área de estudo que busca compreender a relação entre a luz e a natureza das cores
+            bem como sua ação sobre o cérebro humano.
         </p>
+        <p>
+            A cor é uma propriedade da luz e não dos objetos sobre os quais ela incide. Para comprovar esta afirmação
+            Isaac Newton desenvolveu o experimento do prisma de vidro sobre o qual atravessava um raio de luz que se
+            decompunha do outro lado num feixe de cores que ia do violeta ao vermelho, ele deu a esse feixe o nome de
+            espectro das cores.
+        </p>
+        <p>Espectro das Cores:</p>
+        <img src="./fundamentoscor.png" alt="">
 
+        <h1>
+            Fundamentos da Cor
+        </h1>
+        <p>
+            O espectro das cores é o mesmo que vemos no arco-íris e se compõe de uma gama de cores formada pela união de
+            sete cores, a saber: vermelho, laranja, amarelo, verde, azul, anil e violeta.
+        </p>
+        <p>
+            As sete cores do espectro que vemos no arco-íris por sua vez são formadas por várias combinações das cores
+            primárias que são: vermelho azul e amarelo. Basicamente todas as cores podem ser formadas por combinação
+            dessas três.
+        </p>
+        <p>
+            Nas artes, o espectro de cores é utilizado na forma do círculo cromático desenvolvido por Goethe que é
+            composto por um espectro de doze cores formado pela transição entre as três cores primárias.
+        </p>
+        <p>
+            Círculo cromático de Goethe:
+        </p>
+        <img src="./fundamentoscor2.png" alt="">
+        <p>
+            A quantidade de luz refletida também pode definir se uma cor é mais escura ou mais clara, sendo o preto a
+            ausência total de luz ou de reflexão da luz e o branco a união de todas as cores.
+        </p>
     </div>
 </div>
 
