--- a/design/grupos.html
+++ b/design/grupos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,22 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./baldecon.html" class="js-button">Anterior</a>
+        <a href="./clipagem.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Grupos
         </h1>
 
         <p>
+            O agrupamento de objetos é um recurso muito útil e utilizado com frequência no Design Gráfico, já utilizamos
+            este recurso durante este curso, mas não custa nada ressaltarmos sua importância incluindo-o nesta lista.
+            Muitas vezes para fazermos um único desenho precisaremos de vários caminhos independentes, estes caminhos
+            podem, por fim, serem agrupados num único objeto, e toda vez que tivermos de editá-lo podemos desagrupar, ou
+            entrar no grupo para ter acesso a seus membros. Na maioria dos softwares de desenho vetorial o recurso de
+            agrupamento utiliza as teclas de atalho Ctrl+G.
         </p>
-
     </div>
 </div>
 
