--- a/design/harmoniacor.html
+++ b/design/harmoniacor.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,27 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./paletacor.html" class="js-button">Anterior</a>
+        <a href="./midiaimp.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Harmonia das cores
         </h1>
 
         <p>
+            Todas as cores de uma paleta devem possuir harmonia e para isso se utiliza um sistema de harmonização de
+            cores onde as composições, ou paletas podem ser: monocromática, complementar ou análoga. Na composição
+            monocromática são utilizadas intensidades diferentes da mesma cor, podendo as intensidades mais claras
+            representarem brilhos e intensidades mais escuras representarem sombras. Na composição análoga são
+            utilizadas cores próximas com uma mesma intensidade e na composição complementar são utilizadas cores
+            opostas, como, por exemplo, cores quentes com cores frias, a composição complementar possui mais contraste e
+            a análoga menos, de forma que cores análogas são utilizadas em paletas num mesmo objeto como por exemplo,
+            diferentes tonalidades de folhas num arbusto, e cores complementares são utilizadas em objetos destacados de
+            seu entorno, como por exemplo, um pássaro colorido assentado sobre o arbusto.
         </p>
-
+        <p>Seletor de paletas da Adobe: </p>
+        <img src="./harmoniacor.png" alt="">
     </div>
 </div>
 
