--- a/design/mesclagem.html
+++ b/design/mesclagem.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,51 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./opacidade.html" class="js-button">Anterior</a>
+        <a href="./desfoque.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Mesclagem
         </h1>
 
         <p>
+            A mesclagem, diferente da opacidade não apenas mistura as duas emissões de luz dos objetos sobrepostos, mas
+            mescla com cálculos matemáticos gerando resultados diversos, essa técnica é muito utilizada em filtros de
+            fotos. Você já deve ter visto fotos onde parecia que casas ou árvores estavam azuis, roxas ou vermelhas, e
+            não entendeu porque o resto não estava, parecendo até que aquele cenário era real. Isso ocorre pois a
+            mesclagem pode aplicar a cor de um objeto apenas a determinada cor de outro objeto, ou às sombras, ou aos
+            brilhos etc., duas cores entre objetos diferentes podem ser mescladas gerando uma cor completamente
+            diferente.
+        </p>
+        <p>
+            Não estudaremos muito a fundo este quesito por enquanto pois pouco tem a se abordar sobre ele no âmbito do
+            desenho vetorial, mas ele terá uma atenção muito especial nos capítulos deste curso onde estudaremos bitmaps.
+        </p>
+        <p>
+            Para entender a mesclagem de objetos faça o seguinte:
+        </p>
+        <p>
+            1. Abra o Inkscape.
+        </p>
+        <p>
+            2. Baixe uma imagem da internet e importe para dentro do seu desenho.
+        </p>
+        <p>
+            3. Agora desenhe um retângulo sobre a imagem e aplique a ele um preenchimento gradiente com duas cores
+            diferentes, não use transparência.
+        </p>
+        <p>
+            4. Na janela de encaixe Preenchimento e Contorno clique na aba Preenchimento.
+        </p>
+        <p>
+            5. Com o retângulo selecionado, procure por Modo de mistura e vá alterando as opções e vendo o que acontece
+            com o desenho. Alguns modos interessantes em mesclagens são Multiplicação, Superexposição de cores e
+            Luminosidade, mas isso pode varia bastante a depender das cores do desenho.
+        </p>
+        <p class="notas">
+            Diminuir a opacidade de um objeto em modo de mesclagem diminui a força da combinação. Os modos de mesclagem
+            aparecem mais em objetos sem transparências. Adicionar transparência pode atenuar misturas muito vibrantes.
         </p>
 
     </div>
