--- a/design/perspectiva.html
+++ b/design/perspectiva.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,43 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./simetria.html" class="js-button">Anterior</a>
+        <a href="./sombraebri.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Perspectiva e Profundidade
         </h1>
 
         <p>
+            Várias ferramentas em diferentes softwares podem ser utilizadas para dar a sensação de profundidade e
+            perspectiva em um objeto ou desenho. A sensação de profundidade consiste em fazer com que um objeto mesmo
+            composto apenas de linhas bidimensionais (x e y) formem uma imagem que se pareça com um objeto
+            tridimensional (x, y e z). Veja o exemplo abaixo:
         </p>
-
+        <p>Cinco linhas a mais no desenho de um quadrado o transformam num cubo:</p>
+        <img src="./perspectiva1.png" alt="">
+        <p>Um efeito de gradiente pode transformar uma elipse numa esfera:</p>
+        <img src="./perspectiva2.png" alt="">
+        <p>
+            É possível ainda dar sensação de tridimensionalidade a objetos com efeitos de sombra e brilho o que veremos
+            logo à frente.
+        </p>
+        <p>
+            Diferente da profundidade, a perspectiva consiste em dar a sensação de longitude, de que um objeto está se
+            afastando ou se aproximando, vamos ver como fica o cubo do desenho anterior com sensação de perspectiva:
+        </p>
+        <p>Simulação de perspectiva:</p>
+        <img src="./perspectiva3.png" alt="">
+        <p>
+            A perspectiva para transmitir a sensação correta deve possuir um ou mais "pontos de fuga" (Vanishing Point em
+            inglês), que são pontos para os quais as linhas do desenho, ou noção de profundidade devem correr. Uma malha
+            de perspectiva pode ter um, dois, ou três pontos de fuga.
+        </p>
+        <p>Desenho em perspectiva com dois pontos de fuga:</p>
+        <img src="./perspectiva4.png" alt="">
+        <p>Perspectiva com um ponto de fuga:</p>
+        <img src="./perspectiva5.png" alt="">
     </div>
 </div>
 
