--- a/design/rgbhsl.html
+++ b/design/rgbhsl.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,49 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./sistemacor.html" class="js-button">Anterior</a>
+        <a href="./escalahex.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            RGB, HSL, RGBA e HSLA
         </h1>
 
         <p>
+            Nos monitores e telas de dispositivos eletrônicos, onde a produção das cores é feita com incidência da luz
+            interna do monitor sobre o pixel, o sistema de cores é o RGB, cujas cores primárias são vermelho, verde e
+            azul, ou red, blue e green. Desse sistema de cores deriva outros como RGBA, HSL e HSLA.
+        </p>
+        <p>
+            O sistema RGB possui variações que vão de 0 a 255 e oposto ao CMYK a cor preta é produzida por um valor 0,
+            pois neste sistema o branco é a cor chave (key), sendo o rgb 0,0,0 o preto total e o rgb 255,255,255 o
+            branco total, para produzir o vermelho utilizaríamos o valor 255,0,0.
+        </p>
+        <p>
+            No sistema RGB temos uma disponibilidade de cores de 255x255x255, ou seja, 16.581.375 dezesseis milhões e
+            meio de cores possíveis.
+        </p>
+        <p>
+            A escala de cinza em RGB também é definida com valores iguais para cada cor, sendo 127,127,127 um tom de
+            cinza intermediário com 50% de preto.
+        </p>
+        <p>
+            O sistema HSL é um pouco diferente, temos três valores distintos que são Matiz ou Hue(H), Saturação(S) e
+            Luz(L). No sistema HSL temos um espectro em RGB com 360 cores distintas, cada uma delas pode ser modificada
+            através de propriedades de iluminação e saturação, os valores de iluminação e saturação vão de 0 a 100,
+            sendo saturação 0 escala de cinza e 100 cor viva. A iluminação é a intensidade da cor, sendo 0 o preto total
+            e 100 o branco total. O sistema HSL possui uma disponibilidade de cores de 360x100x100 ou 3.600.000 cores
+            possíveis.
+        </p>
+        <p>
+            No sistema HSL os tons de cinza são definidos com valor 0 para a saturação e alterando o valor de iluminação
+            entre 0 e 100, sendo HSL 0,0,50 um tom de cinza com 50% de preto.
+        </p>
+        <p>
+            Tanto o sistema RGB quanto o HSL possuem uma variação que acrescenta um canal Alpha que é a transparência da
+            cor, são o RGBA e o HSLA, nesse caso, é possível ajustar a transparência da cor numa escala de 0 a 100,
+            definindo a porcentagem de opacidade sendo 0 a transparência total e 100 a opacidade total, lembrando que
+            opacidade significa ausência de transparência.
         </p>
 
     </div>
