--- a/design/simetria.html
+++ b/design/simetria.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,38 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./sombrasbri.html" class="js-button">Anterior</a>
+        <a href="./perspectiva.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Efeitos de design
         </h1>
 
         <p>
+            Este capítulo trata de assuntos essenciais no mundo do Design Gráfico e que costumam ser negligenciados em
+            muitos cursos, que ao focar no ensino de uma única ferramenta, acabam por não transmitir as noções de
+            desenho mais importante. O que abordaremos agora são conceitos e não necessitam de exercícios ou tutoriais,
+            mas aconselho que procure fazer desenhos para aplicá-los de modo a fixar em sua memória.
         </p>
+        <h1>
+            Simetria
+        </h1>
 
+        <p>
+            Em diversos casos, um desenho pode ser feito pela metade e depois duplicado para formar o objeto completo.
+            Esse recurso não é só utilizado para facilitar o trabalho ou poupar tempo, mas também garante que o objeto
+            tenha simetria, ou seja, que ambos os lados tenham a mesma proporção, o que é muito mais difícil de ser
+            conseguido desenhando cada lado de forma independente., um rosto, por exemplo, possui simetria, o que
+            significa que traçando uma linha ao meio de um desenho de rosto e separando, ambas as partes podem ser
+            sobrepostas que se coincidirão. Veja alguns exemplos de simetria:
+        </p>
+        <p>A simetria é muito utilizada na arquitetura:</p>
+        <img src="./simetria1.png" alt="">
+        <p>A simetria está presente em toda a natureza:</p>
+        <img src="./simetria2.png" alt="">
+        <p>O rosto humano é o exemplo mais conhecido de simetria:</p>
+        <img src="./simetria3.png" alt="">
     </div>
 </div>
 
