--- a/design/sistemacor.html
+++ b/design/sistemacor.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,33 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./fundamentoscor.html" class="js-button">Anterior</a>
+        <a href="./rgbhsl.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Sistemas de Cores
         </h1>
-
+        <img src="./sistemacor.png" alt="">
         <p>
+            Como o mundo do Design Gráfico é um mundo digital, é importante conhecermos os sistemas de cores existentes,
+            o primeiro, e com o qual a maioria das pessoas já está acostumada é o sistema de cores CMYK, pois é o
+            sistema das tintas usadas nos cartuchos de impressão e segue um padrão baseado nas cores primárias. O
+            sistema CMYK é composto pelas cores Cyan (C), Magenta (M), Yellow (Y) e preto (K) que é a cor chave (key).
         </p>
-
+        <p>
+            O sistema CMYK possui variações que vão de 0 a 100, sendo assim, 0,0,0,0 produziria a cor branca, enquanto
+            100,100,100,100 produziria o preto total.
+        </p>
+        <p>
+            No sistema CMYK, a combinação 0,0,0,100 produziria apenas um cinza escuro próximo do preto, para produzir o
+            ciano por exemplo, utilizaríamos 100,0,0,0, e o amarelo 0,0,100,0 e assim por diante. Neste sistema temos
+            uma disponibilidade de cores de 100x100x100x100 ou seja 100.000.000 (cem milhões) de cores possíveis.
+        </p>
+        <p>
+            As escalas de cinza em CMYK são definidas com valores iguais para cada cor, assim CMYK 10,10,10,10 seria um
+            tom cinza com 10% de preto, e 50,50,50,50 seria um cinza intermediário com 50% de preto.
+        </p>
     </div>
 </div>
 
