--- a/design/sombraebri.html
+++ b/design/sombraebri.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,32 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./perspectiva.html" class="js-button">Anterior</a>
+        <a href="./espacovazneg.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Sombra e Brilho
         </h1>
 
         <p>
+            Sombra e brilho são utilizados para dar sensações de profundidade, perspectiva e realismo a desenhos, e
+            existem diferentes formas de utilizá-los. Sombras e brilhos podem ser criados tanto utilizando variações de
+            cor, como transparências em cores mais escuras ou mais claras que o desenho.
         </p>
 
+        <p>Desenho vetorial simulando sombra e brilho:</p>
+        <img src="./sombraebri.png" alt="">
+
+        <p>
+            Um desenho vetorial pode possuir sombras e brilhos sobre o objeto, ou sombras projetadas do objeto sobre uma
+            superfície. Geralmente essas sombras são feitas com curvas independentes ou com gradientes no próprio
+            preenchimento do objeto. Antes de se aplicar sombras e brilhos é necessário definir ou identificar onde está
+            ou onde estão as fontes de luz do desenho, que podem ser uma ou mais. Quanto mais fontes de luz, mais
+            complexo será o jogo de sombras e brilhos incidentes sobre o desenho.
+        </p>
+        <p>Note os efeitos de brilho e sombra usados tanto no desenho vetorial quanto na pintura de fundo:</p>
+        <img src="./sombraebri2.png" alt="">
     </div>
 </div>
 
