--- a/design/sombrasbri.html
+++ b/design/sombrasbri.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,14 +22,64 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./desfoque.html" class="js-button">Anterior</a>
+        <a href="./simetria.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Sombras e brilhos
         </h1>
 
         <p>
+            Sombras e brilhos podem se referir a três conceitos diferentes dentro do Design Gráfico, o primeiro conceito
+            refere-se à diferença entre cores escuras e cores claras numa única imagem e é um conceito exclusivamente da
+            manipulação de imagens, o segundo refere-se a simulação de sombras e brilhos da vida real, esse é o conceito
+            na ilustração e na manipulação de imagens e veremos um pouco sobre ele no próximo capítulo, o terceiro,
+            exclusivo do desenho vetorial, refere-se a efeitos de desfoque escuros e claros aplicados às bordas de um
+            vetor, é o que veremos agora. Os efeitos com cor clara são chamados de “brilho”, e os de cor escura são
+            chamados de “sombra”, esses efeitos podem ser aplicados à parte externa, dando uma sensação de profundidade
+            ou à parte interna do objeto, dando uma sensação de relevo, alguns softwares podem ter ferramentas distintas
+            para brilho/sombra internos e externos, podem ainda ter a função de separar a sombra do objeto e até mesmo
+            removê-la depois de aplicada. Vejamos como esse efeito funciona no Inkscape:
+        </p>
+        <p>
+            1. Abra o Inkscape.
+        </p>
+        <p>
+            2. Desenhe uma forma.
+        </p>
+        <p>
+            3. Com a forma selecionada clique no menu &rightarrow; Filtros &rightarrow; Sombras e brilhos &rightarrow;
+            Sombra projetada.
+        </p>
+        <p>
+            4. Na janela que se abriu, clique em Pré-visualizar.
+        </p>
+        <p>
+            5. Na aba Cor do desfoque escolha uma cor clara (brilho) ou escura (sombra). Para deixar a cor mais clara ou
+            mais escura de forma mais fácil, utilize o modo HSL.
+        </p>
+        <p>
+            6. Na aba Opções altere o raio do desfoque os deslocamentos e veja como o efeito é aplicado ao objeto.
+        </p>
+        <p>
+            7. Para alternar entre um efeito interno e um externo, utilize a caixa de seleção Tipo de sombra.
+        </p>
+    </div>
+    <br>
+    <div class="js-post">
+        <img src="./exercicio.png" alt="">
+
+        <p>
+            Observe a imagem abaixo e tente descobrir quais efeitos deste capítulo foram utilizados nela. Seu desafio
+            será tentar reproduzi-la no Inkscape com a maior fidelidade que você conseguir. Há mais de uma maneira para
+            se encontrar uma mesma solução, a depender das ferramentas que utilizamos, tente encontrar a solução mais
+            adequada. Se você tiver dificuldades, pode baixar o arquivo svg no site ou solicitá-lo ao seu instrutor para
+            verificar como a arte foi criada. Tudo foi feito no Inkscape.
+        </p>
+        <img src="./sombrasbri.png" alt="">
+        <p class="notas">
+            Para baixar as imagens e outros arquivos do curso, clique na Sessão de Downloads no final do Índice.
         </p>
 
     </div>
