--- a/design/tipografia.html
+++ b/design/tipografia.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,21 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
-
+        <a href="./midiaimp.html" class="js-button">Anterior</a>
+        <a href="./familiafon.html" class="js-button" style="float: right;">Próximo</a>
 
         <h1>
+            Tipografia
         </h1>
 
         <p>
+            Um dos principais fundamentos do Design Gráfico é a tipografia, ou a manipulação de fontes de texto, cada
+            letra de uma fonte é chamada de tipo, esse costume vem da época da prensa de tipos móveis de Gutenberg onde
+            as páginas eram impressas numa prensa manual utilizando uma chapa com tipos metálicos para cada letra e
+            símbolo. Na caixa de tipos mais alta ficavam as letras maiúsculas e na caixa mais baixa ficavam os tipos
+            minúsculos, daí hoje chamarmos maiúsculas de caixa alta e minúsculas de caixa baixa.
         </p>
-
+        <br><br><br><br>
     </div>
 </div>
 
